--- a/apps/dialer/oncall.html
+++ b/apps/dialer/oncall.html
@@ -8,66 +8,72 @@
     <title>Dialer</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="../shared/elements/gaia-theme/gaia-theme.css">
+    <link rel="stylesheet" type="text/css" href="app://theme.gaiamobile.org/shared/elements/gaia-theme/gaia-theme.css">
 
-    <link rel="stylesheet" type="text/css" href="../shared/style/dialer/overlay.css">
+    <link rel="stylesheet" type="text/css" href="/shared/style/dialer/overlay.css">
 
-    <link rel="stylesheet" type="text/css" href="style/conference_group_ui.css">
-    <link rel="stylesheet" type="text/css" href="style/oncall.css">
-    <link rel="stylesheet" type="text/css" href="style/oncall_status_bar.css">
-    <link rel="stylesheet" type="text/css" href="style/status.css">
+    <link rel="stylesheet" type="text/css" href="/dialer/style/conference_group_ui.css">
+    <link rel="stylesheet" type="text/css" href="/dialer/style/oncall.css">
+    <link rel="stylesheet" type="text/css" href="/dialer/style/oncall_status_bar.css">
+    <link rel="stylesheet" type="text/css" href="/dialer/style/status.css">
 
-    <link rel="stylesheet" type="text/css" href="../shared/style/status.css">
-    <link rel="stylesheet" type="text/css" href="../shared/style/action_menu.css">
-    <link rel="stylesheet" type="text/css" href="../shared/style/dialer/keypad.css">
+    <link rel="stylesheet" type="text/css" href="/shared/style/status.css">
+    <link rel="stylesheet" type="text/css" href="/shared/style/action_menu.css">
+    <link rel="stylesheet" type="text/css" href="/shared/style/dialer/keypad.css">
 
     <!-- Localization -->
-    <script defer type="text/javascript" src="../shared/js/lazy_loader.js"></script>
+    <script defer type="text/javascript" src="/shared/js/lazy_loader.js"></script>
     <meta name="defaultLanguage" content="en-US">
     <meta name="availableLanguages" content="en-US">
     <link rel="localization" href="locales/dialer.{locale}.properties">
-    <link rel="localization" href="../shared/locales/lockscreen/lockscreen.{locale}.properties">
-    <link rel="localization" href="../shared/locales/keypad/keypad.{locale}.properties">
-    <link rel="localization" href="../shared/locales/telephony/telephony.{locale}.properties">
+    <link rel="localization" href="/shared/locales/lockscreen/lockscreen.{locale}.properties">
+    <link rel="localization" href="/shared/locales/keypad/keypad.{locale}.properties">
+    <link rel="localization" href="/shared/locales/telephony/telephony.{locale}.properties">
 
-    <script defer type="application/javascript" src="../shared/js/l10n.js"></script>
-    <script defer type="application/javascript" src="../shared/js/moz_intl.js"></script>
+    <script defer type="application/javascript" src="/shared/js/l10n.js"></script>
+    <script defer type="application/javascript" src="/shared/js/moz_intl.js"></script>
 
-    <script defer type="application/javascript" src="js/oncall.js"></script>
-    <script defer type="application/javascript" src="../shared/js/settings_listener.js"></script>
-    <script defer type="application/javascript" src="../shared/js/settings_url.js"></script>
-    <script defer type="application/javascript" src="../shared/js/async_storage.js"></script>
-    <script defer type="application/javascript" src="../shared/js/contact_photo_helper.js"></script>
-    <script defer type="application/javascript" src="../shared/js/font_size_utils.js"></script>
-    <script defer type="application/javascript" src="../shared/js/date_time_helper.js"></script>
+    <script defer type="application/javascript" src="/dialer/js/oncall.js"></script>
+    <script defer type="application/javascript" src="/shared/js/settings_listener.js"></script>
+    <script defer type="application/javascript" src="/shared/js/settings_url.js"></script>
+    <script defer type="application/javascript" src="/shared/js/async_storage.js"></script>
+    <script defer type="application/javascript" src="/shared/js/contact_photo_helper.js"></script>
+    <script defer type="application/javascript" src="/shared/js/font_size_utils.js"></script>
+    <script defer type="application/javascript" src="/shared/js/date_time_helper.js"></script>
 
-    <script defer type="application/javascript" src="../shared/js/bluetooth_helper.js"></script>
-    <script defer type="application/javascript" src="../shared/js/simple_phone_matcher.js"></script>
-    <script defer type="application/javascript" src="../shared/js/dialer/tone_player.js"></script>
-    <script defer type="application/javascript" src="../shared/js/dialer/dtmf_tone.js"></script>
-    <script defer type="application/javascript" src="../shared/js/dialer/utils.js"></script>
+    <script defer type="application/javascript" src="/shared/js/bluetooth_helper.js"></script>
+    <script defer type="application/javascript" src="/shared/js/simple_phone_matcher.js"></script>
+    <script defer type="application/javascript" src="/shared/js/dialer/tone_player.js"></script>
+    <script defer type="application/javascript" src="/shared/js/dialer/dtmf_tone.js"></script>
+    <script defer type="application/javascript" src="/shared/js/dialer/utils.js"></script>
 
-    <script defer type="application/javascript" src="js/contacts.js"></script>
-    <script defer type="application/javascript" src="js/keypad.js"></script>
-    <script defer type="application/javascript" src="js/call_screen.js"></script>
-    <script defer type="application/javascript" src="js/calls_handler.js"></script>
-    <script defer type="application/javascript" src="js/conference_group_handler.js"></script>
-    <script defer type="application/javascript" src="js/conference_group_ui.js"></script>
-    <script defer type="application/javascript" src="js/handled_call.js"></script>
-    <script defer type="application/javascript" src="js/font_size_manager.js"></script>
-    <script defer type="application/javascript" src="js/voicemail.js"></script>
+    <script defer type="application/javascript" src="/dialer/js/contacts.js"></script>
+    <script defer type="application/javascript" src="/dialer/js/keypad.js"></script>
+    <script defer type="application/javascript" src="/dialer/js/call_screen.js"></script>
+    <script defer type="application/javascript" src="/dialer/js/calls_handler.js"></script>
+    <script defer type="application/javascript" src="/dialer/js/conference_group_handler.js"></script>
+    <script defer type="application/javascript" src="/dialer/js/conference_group_ui.js"></script>
+    <script defer type="application/javascript" src="/dialer/js/handled_call.js"></script>
+    <script defer type="application/javascript" src="/dialer/js/font_size_manager.js"></script>
+    <script defer type="application/javascript" src="/dialer/js/voicemail.js"></script>
+
+    <!-- Lazy load these:
+    <script defer type="application/javascript" src="/shared/js/fb/fb_request.js"></script>
+    <script defer type="application/javascript" src="/shared/js/fb/fb_data_reader.js"></script>
+    <script defer type="application/javascript" src="/shared/js/fb/fb_reader_utils.js"></script>
+    -->
 
     <!-- incoming call / swiper on locked screen-->
-    <link rel="stylesheet" type="text/css" href="style/lockscreen.css">
-    <script defer src="../shared/js/settings_listener.js"></script>
-    <script defer src="../shared/js/mobile_operator.js"></script>
-    <script defer src="../shared/js/lockscreen_slide.js"></script>
-    <script defer src="../shared/js/screen_layout.js"></script>
-    <script defer src="../shared/js/simslot.js"></script>
-    <script defer src="../shared/js/simslot_manager.js"></script>
-    <script defer src="../shared/js/lockscreen_connection_info_manager.js"></script>
+    <link rel="stylesheet" type="text/css" href="/dialer/style/lockscreen.css">
+    <script defer src="/shared/js/settings_listener.js"></script>
+    <script defer src="/shared/js/mobile_operator.js"></script>
+    <script defer src="/shared/js/lockscreen_slide.js"></script>
+    <script defer src="/shared/js/screen_layout.js"></script>
+    <script defer src="/shared/js/simslot.js"></script>
+    <script defer src="/shared/js/simslot_manager.js"></script>
+    <script defer src="/shared/js/lockscreen_connection_info_manager.js"></script>
 
-    <link rel="import" href="elements/conference_group_details.html">
+    <link rel="import" href="/dialer/elements/conference_group_details.html">
   </head>
   <body class="skin-comms theme-communications">
     <article id="call-screen" data-layout class="displayed"
