--- a/apps/dialer/index.html
+++ b/apps/dialer/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="theme-group" content="theme-communications">
     <meta name="theme-color" content="var(--header-background)">
+    <link rel="manifest" href="manifest.webapp">
     <title>Dialer</title>
 
     <!-- Localization -->
@@ -12,110 +13,66 @@
     <meta name="availableLanguages" content="en-US">
     <link rel="localization" href="locales/dialer.{locale}.properties">
     <link rel="localization" href="locales/shared.{locale}.properties">
-    <link rel="localization" href="/shared/locales/import_contacts/import_contacts.{locale}.properties">
-    <link rel="localization" href="/shared/locales/keypad/keypad.{locale}.properties">
-    <link rel="localization" href="/shared/locales/phone_types/phone_types.{locale}.properties">
-    <link rel="localization" href="/shared/locales/telephony/telephony.{locale}.properties">
-    <link rel="localization" href="/shared/locales/voicemail/voicemail.{locale}.properties">
-    <link rel="localization" href="/shared/elements/gaia_menu/locales/gaia_menu.{locale}.properties">
-    <link rel="localization" href="/shared/elements/gaia_sim_picker/locales/gaia_sim_picker.{locale}.properties">
+    <link rel="localization" href="../shared/locales/import_contacts/import_contacts.{locale}.properties">
+    <link rel="localization" href="../shared/locales/keypad/keypad.{locale}.properties">
+    <link rel="localization" href="../shared/locales/phone_types/phone_types.{locale}.properties">
+    <link rel="localization" href="../shared/locales/telephony/telephony.{locale}.properties">
+    <link rel="localization" href="../shared/locales/voicemail/voicemail.{locale}.properties">
+    <link rel="localization" href="../shared/elements/gaia_menu/locales/gaia_menu.{locale}.properties">
+    <link rel="localization" href="../shared/elements/gaia_sim_picker/locales/gaia_sim_picker.{locale}.properties">
 
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="/shared/style/animations.css">
-    <link rel="stylesheet" type="text/css" href="/shared/style/dialer/dialer.css">
+    <link rel="stylesheet" type="text/css" href="../shared/style/animations.css">
+    <link rel="stylesheet" type="text/css" href="../shared/style/dialer/dialer.css">
     <link rel="stylesheet" type="text/css" href="style/toolbar.css">
 
-    <link rel="stylesheet" type="text/css" href="/shared/style/dialer/keypad.css">
-    <link rel="stylesheet" type="text/css" href="/dialer/style/call_log.css">
-    <link rel="stylesheet" type="text/css" href="/dialer/style/suggestion.css">
-    <link rel="stylesheet" type="text/css" href="/shared/style/contacts/contact_in_overlay.css">
-    <link rel="stylesheet" type="text/css" href="/shared/style/dialer/overlay.css">
+    <link rel="stylesheet" type="text/css" href="../shared/style/dialer/keypad.css">
+    <link rel="stylesheet" type="text/css" href="style/call_log.css">
+    <link rel="stylesheet" type="text/css" href="style/suggestion.css">
+    <link rel="stylesheet" type="text/css" href="../shared/style/contacts/contact_in_overlay.css">
+    <link rel="stylesheet" type="text/css" href="../shared/style/dialer/overlay.css">
 
-    <link rel="stylesheet" type="text/css" href="/shared/style/tabs.css">
+    <link rel="stylesheet" type="text/css" href="../shared/style/tabs.css">
 
-    <link rel="stylesheet" type="text/css" href="app://theme.gaiamobile.org/shared/elements/gaia-theme/gaia-theme.css">
-    <link rel="stylesheet" type="text/css" href="/shared/elements/gaia-icons/gaia-icons.css">
-    <link rel="stylesheet" type="text/css" href="/shared/elements/gaia-icons/bidi-helper.css">
+    <link rel="stylesheet" type="text/css" href="../shared/elements/gaia-theme/gaia-theme.css">
+    <link rel="stylesheet" type="text/css" href="../shared/elements/gaia-icons/gaia-icons.css">
+    <link rel="stylesheet" type="text/css" href="../shared/elements/gaia-icons/bidi-helper.css">
 
-    <link rel="stylesheet" type="text/css" href="/shared/style/option_menu.css">
+    <link rel="stylesheet" type="text/css" href="../shared/style/option_menu.css">
 
     <!-- JS -->
-    <script defer src="/shared/js/l10n.js"></script>
-    <script defer src="/shared/js/lazy_loader.js"></script>
-    <script defer src="/shared/js/font_size_utils.js"></script>
-    <script defer src="/dialer/js/index.js"></script>
+    <script defer src="../shared/js/l10n.js"></script>
+    <script defer src="../shared/js/lazy_loader.js"></script>
+    <script defer src="../shared/js/font_size_utils.js"></script>
+    <script defer src="js/index.js"></script>
 
-    <script defer src="/shared/js/dialer/dtmf_tone.js"></script>
-    <script defer src="/shared/js/dialer/tone_player.js"></script>
-    <script defer src="/shared/js/dialer/utils.js"></script>
+    <script defer src="../shared/js/dialer/dtmf_tone.js"></script>
+    <script defer src="../shared/js/dialer/tone_player.js"></script>
+    <script defer src="../shared/js/dialer/utils.js"></script>
 
-    <script defer src="/dialer/js/navigation.js"></script>
-    <script defer src="/dialer/js/contacts.js"></script>
-    <script defer src="/dialer/js/dialer.js"></script>
-    <script defer src="/dialer/js/call_log.js"></script>
-    <script defer src="/dialer/js/call_log_db.js"></script>
-    <script defer src="/dialer/js/font_size_manager.js"></script>
-    <script defer src="/dialer/js/keypad.js"></script>
-    <script defer src="/dialer/js/voicemail.js"></script>
+    <script defer src="js/navigation.js"></script>
+    <script defer src="js/contacts.js"></script>
+    <script defer src="js/dialer.js"></script>
+    <script defer src="js/call_log.js"></script>
+    <script defer src="js/call_log_db.js"></script>
+    <script defer src="js/font_size_manager.js"></script>
+    <script defer src="js/keypad.js"></script>
+    <script defer src="js/voicemail.js"></script>
 
-    <script defer src="/shared/js/accessibility_helper.js"></script>
-    <script defer src="/shared/js/async_storage.js"></script>
-    <script defer src="/shared/js/contact_photo_helper.js"></script>
-    <script defer src="/shared/js/multi_sim_action_button.js"></script>
-    <script defer src="/shared/js/notification_helper.js"></script>
-    <script defer src="/shared/js/simple_phone_matcher.js"></script>
-
-    <!-- Lazy load all the things:
-    <link rel="stylesheet" type="text/css" href="/shared/style/action_menu.css">
-    <link rel="stylesheet" type="text/css" href="/shared/style/confirm.css">
-    <link rel="stylesheet" type="text/css" href="/shared/style/edit_mode.css">
-    <link rel="stylesheet" type="text/css" href="/shared/style/switches.css">
-    <link rel="stylesheet" type="text/css" href="/shared/style/lists.css">
-    <link rel="stylesheet" type="text/css" href="/shared/style/progress_activity.css">
-    <link rel="stylesheet" type="text/css" href="/shared/style/input_areas.css">
-    <link rel="stylesheet" type="text/css" href="/dialer/style/mmi.css">
-    <link rel="stylesheet" type="text/css" href="/shared/style/contacts/contacts_buttons.css">
-    <link rel="stylesheet" type="text/css" href="/shared/style/contacts.css">
-    <link rel="stylesheet" type="text/css" href="/dialer/style/buttons.css">
-    <link rel="stylesheet" type="text/css" href="/shared/elements/gaia_menu/style.css">
-    <link rel="stylesheet" type="text/css" href="/shared/elements/gaia_sim_picker/style.css">
-    <script defer src="/shared/elements/gaia_menu/script.js"></script>
-    <script defer src="/shared/elements/gaia_sim_picker/script.js"></script>
-    <script defer src="/shared/js/component_utils.js"></script>
-    <script defer src="/shared/js/mobile_operator.js"></script>
-    <script defer src="/shared/js/option_menu.js"></script>
-    <script defer src="/shared/js/settings_listener.js"></script>
-    <script defer src="/shared/js/confirm.js"></script>
-    <script defer src="/shared/js/fb/fb_request.js"></script>
-    <script defer src="/shared/js/fb/fb_data_reader.js"></script>
-    <script defer src="/shared/js/fb/fb_reader_utils.js"></script>
-    <script defer src="/shared/js/fb/fb_tel_index.js"></script>
-    <script defer src="/shared/js/binary_search.js"></script>
-    <script defer src="/shared/js/sticky_header.js"></script>
-    <script defer src="/shared/js/sim_settings_helper.js"></script>
-    <script defer src="/shared/js/dialer/telephony_messages.js"></script>
-    <script defer src="/shared/js/contacts/contacts_buttons.js"></script>
-    <script defer src="/shared/js/custom_dialog.js"></script>
-    <script defer src="/dialer/js/contact_data_manager.js"></script>
-    <script defer src="/dialer/js/suggestion_bar.js"></script>
-    <script defer src="/dialer/js/telephony_helper.js"></script>
-    <script defer src="/dialer/js/mmi.js"></script>
-    <script defer src="/dialer/js/mmi_ui.js"></script>
-    <script defer src="/shared/js/icc_helper.js"></script>
-    <script defer src="/shared/elements/config.js"></script>
-    <script defer src="/shared/elements/gaia-header/dist/gaia-header.js"></script>
-    <script defer src="/shared/js/text_normalizer.js"></script>
-    <script defer src="/shared/js/contacts/utilities/templates.js"></script>
-    <script defer src="/shared/js/contacts/sms_integration.js"></script>
-    -->
+    <script defer src="../shared/js/accessibility_helper.js"></script>
+    <script defer src="../shared/js/async_storage.js"></script>
+    <script defer src="../shared/js/contact_photo_helper.js"></script>
+    <script defer src="../shared/js/multi_sim_action_button.js"></script>
+    <script defer src="../shared/js/notification_helper.js"></script>
+    <script defer src="../shared/js/simple_phone_matcher.js"></script>
 
     <link rel="import" href="elements/edit-mode.html">
     <link rel="import" href="elements/call-info-view.html">
-    <link rel="import" href="/shared/elements/contacts/contact_in_overlay.html">
-    <link rel="import" href="/shared/elements/contacts/contact_list_overlay.html">
-    <link rel="import" href="/shared/elements/confirmation-message.html">
-    <link rel="import" href="/contacts/elements/phone_details.html">
-    <link rel="import" href="/contacts/elements/email_details.html">
+    <link rel="import" href="../shared/elements/contacts/contact_in_overlay.html">
+    <link rel="import" href="../shared/elements/contacts/contact_list_overlay.html">
+    <link rel="import" href="../shared/elements/confirmation-message.html">
+    <link rel="import" href="contacts/elements/phone_details.html">
+    <link rel="import" href="contacts/elements/email_details.html">
   </head>
   <body role="application" class="skin-comms theme-communications">
     <section id="views" role="tablist" class="bb-tablist">
@@ -149,7 +106,9 @@
           <section is="call-info-view" id="call-info-view" role="region" hidden></section>
         </div>
       </li>
-      <li role="presentation" class="view" id="contacts-view">
+      <!-- Hidding the contacts tab until we make the app work again -->
+      <!-- Remove the 'hide' class when that happens -->
+      <li role="presentation" class="view hide" id="contacts-view">
         <a id="option-contacts" role="tab" aria-controls="iframe-contacts-container" class="icon icon-contacts" data-l10n-id="contacts" aria-selected="false" data-destination="contacts"></a>
         <div id="iframe-contacts-container" role="tabpanel" class="bb-tabpanel" aria-labelledby="option-contacts">
         </div>
@@ -229,7 +188,9 @@
               </div>
             </section>
             <section id="keypad-callbar">
-              <button id="keypad-callbar-add-contact" data-value="add-contact" class="reset-button keypad-callbar-button icon-add-contact disable-when-dialog-animates" data-l10n-id="dialerAddContact" disabled></button>
+              <!-- Hidding the add to contacts button until we make the app work again -->
+              <!-- Remove the 'hide' class when that happens -->
+              <button id="keypad-callbar-add-contact" data-value="add-contact" class="hide reset-button keypad-callbar-button icon-add-contact disable-when-dialog-animates" data-l10n-id="dialerAddContact" disabled></button>
               <button id="keypad-callbar-call-action" class="reset-button" data-value="make-call" data-l10n-id="makeCall">
                 <div class="js-sim-indication"></div>
               </button>
